assets/styles/global.css
@font-face {
    font-family: "Suisse Screen";
    font-weight: 200;
    src: url(../fonts/SuisseScreen-Light-WebS.woff2) format("woff2");
}

@font-face {
    font-family: "Suisse Screen";
    font-weight: 400;
    src: url(../fonts/SuisseScreen-Regular-WebS.woff2) format("woff2");
}

@font-face {
    font-family: "Suisse Screen";
    font-weight: 500;
    src: url(../fonts/SuisseScreen-Medium-WebS.woff2) format("woff2");
}

@font-face {
    font-family: "Suisse Screen";
    font-weight: 600;
    src: url(../fonts/SuisseScreen-SemiBold-WebS.woff2) format("woff2");
}

*,
*::before,
*::after {
    box-sizing: border-box;
}

:root {
    --clr-bg: hsl(0, 0%, 95%);
    --clr-txt: hsl(0, 0%, 0%);
    --clr-acc: hsl(240, 100%, 50%);

    --border-width: 0.125rem;
    --size-s: 0.5rem;
    --size-m: 1.5rem;
    --size-l: 2rem;
    --size-xxl: 3rem;
}

html {
    font-family: "Suisse Screen";
    font-size: 20px;
}

body {
    margin: 0;
    color: var(--clr-txt);
    background-color: var(--clr-bg);
    overflow-y: scroll;
}

a {
    text-decoration: none;
    color: black;
}

@media (hover: hover) {
    .link {
        position: relative;
        transition: clip-path 275ms ease;
    }

    .link:hover span::before,
    .link:focus span::before {
        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
    }

    .link span {
        position: relative;
        display: inline-block;
        color: black;
    }

    .link span::before {
        position: absolute;
        content: attr(data-content);
        color: black;
        text-decoration: underline;
        text-decoration-color: var(--clr-acc);
        clip-path: polygon(0 0, 0 0, 0% 100%, 0 100%);
        transition: clip-path 275ms ease;
    }

    span.wavy::before {
        text-decoration-style: wavy;
    }

    .underline-link {
        position: relative;
        transition: clip-path 275ms ease;
    }

    .underline-link:hover span::before,
    .underline-link:focus span::before {
        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
    }

    .underline-link span {
        position: relative;
        display: inline-block;
        color: var(--clr-acc);
    }

    .underline-link span::before {
        position: absolute;
        content: attr(data-content);
        color: var(--clr-acc);
        text-decoration: underline;
        text-decoration-color: var(--clr-acc);
        clip-path: polygon(0 0, 0 0, 0% 100%, 0 100%);
        transition: clip-path 275ms ease;
    }

    span.underline::before {
        text-decoration-style: underline;
    }
}

.main-layout {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    gap: 1rem;

    padding-inline: 1rem;
}

.text-acc {
    color: var(--clr-acc);
}

.fs-s {
    font-size: var(--size-s);
}

.fs-normal {
    font-size: 1rem;
}

.fs-m {
    font-size: var(--size-m);
}

.fs-xxl {
    font-size: var(--size-xxl);
}

.fw-light {
    font-weight: 200;
}

.fw-sb {
    font-weight: 500;
}

.page-header {
    align-items: center;
    position: sticky;
    top: 0;
}

.logo {
    font-weight: 400;
    font-size: var(--size-m);

    grid-column: span 2;
}

.logo-link {
    color: var(--clr-txt);
}

.logo,
.main-nav__link {
    font-size: var(--size-m);
}

.main-nav {
    grid-column: span 4;
}

.main-nav__list {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 1rem;

    padding-left: 0;
    list-style: none;
    margin-top: 0;
}

.main-nav__list > li {
    width: fit-content;
    overflow: hidden;
}

.link-black {
    background-image: linear-gradient(90deg, white 50%, black 50%);
}

.link-acc {
    background-image: linear-gradient(90deg, white 50%, var(--clr-acc) 50%);
}

.link-hover {
    color: transparent;

    -webkit-background-clip: text;
    background-clip: text;
    background-size: 200%;
    background-position: right;

    position: relative;
    overflow: hidden;
}

.link-hover:hover {
    background-position: left;
}

.link-hover::after {
    content: "";
    background-color: var(--clr-acc);

    position: absolute;
    top: -0.25rem;
    bottom: -0.25rem;
    left: 100%;
    right: -100%;
    z-index: -1;
}

.link-hover:hover::after {
    inset: -0.25rem -0.5rem;
}

.trans-fast,
.trans-fast:hover,
.trans-fast::after,
.trans-fast:hover::after {
    transition: 0.3s ease-in-out;
}

.trans-slow,
.trans-slow:hover,
.trans-slow::after,
.trans-slow:hover::after {
    transition: 0.5s ease-in-out;
}

#full-width {
    padding-bottom: 3rem;
}

@media screen and (max-width: 1480px) {
    html {
        font-size: 18px;
    }
}

@media screen and (max-width: 1300px) {
    html {
        font-size: 16px;
    }
}

@media screen and (max-width: 1100px) {
    .page-header.main-layout {
        grid-template-columns: repeat(4, 1fr);
    }

    .main-nav {
        margin-inline: -1rem;
    }

    .main-nav__list {
        gap: 0;
    }

    .main-nav__list > li {
        width: 100%;
        border-block: 0.05rem solid var(--clr-acc);
    }

    .main-nav__list > li:not(:last-child) {
        border-right: 0.05rem solid var(--clr-acc);
    }

    .main-nav__link {
        display: inline-block;
        padding: 0.25rem 1rem;
    }
}

@media screen and (max-width: 768px) {
    .main-layout,
    .page-header.main-layout {
        grid-template-columns: 1fr 1fr;
    }

    .page-header {
        gap: 0;

        position: static;
    }

    .main-nav {
        grid-column: span 2;

        margin-inline: -1rem;
    }

    .main-nav__list {
        grid-template-columns: 1fr 1fr;
        gap: 0;

        margin-bottom: var(--size-xxl);
    }

    .main-nav__list > li:first-of-type,
    .main-nav__list > li:nth-of-type(2) {
        border-top: 0.05rem solid var(--clr-acc);
    }

    .main-nav__list > li:first-of-type,
    .main-nav__list > li:nth-of-type(3) {
        border-right: 0.05rem solid var(--clr-acc);
    }

    .main-nav__list > li {
        width: 100%;
        border-bottom: 0.05rem solid var(--clr-acc);
    }

    .main-nav__link {
        display: inline-block;
        font-size: 1rem;
        padding: 0.25rem 1rem;
    }

    .fs-xxl {
        font-size: var(--size-m);
    }

    .fs-m {
        font-size: var(--size-normal);
    }
}

